@@ -12,6 +12,7 @@ first:
   approve_comments: false
   comment_age: 30
   timezone: America/New_York
+  articles_per_page: 15
 hostess:
   id: 2
   title: Cupcake
@@ -21,6 +22,7 @@ hostess:
   timezone: UTC
   approve_comments: false
   comment_age: 0
+  articles_per_page: 10
 garden:
   id: 3
   title: walled garden
